rdme and docs of ipynb

--- a/code.ipynb
+++ b/code.ipynb
@@ -2404,6 +2404,23 @@
     }
    ],
    "execution_count": 50
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Conclusion\n",
+    "From the validation of the model, we can see that the model performs well in classifying the sentiment of chat messages as positive, negative, or neutral. The model has an accuracy of 0.93, which is quite good. The model can be used to predict the sentiment of new chat messages and help telegram group chat admins to monitor the chat and know the sentiment of the chat and take necessary actions. telegram bots can also be used to monitor the chat and give feedback to the admins.\n",
+    "\n",
+    "## The problem?\n",
+    "Because of the nature of telegram group chats it seems hard for the model to predict the sentiment of the chat data and netural sentiment is more than the positive and negative sentiment. The model can be further improved by using more advanced machine learning algorithms, tuning hyperparameters, and using more data for training. Overall, the sentiment analysis model is a useful tool for analyzing the sentiment of chat data from telegram group chats and can provide valuable insights for group chat admins and users.\n",
+    "## Deployment\n",
+    "I used Flask a lightweight WSGI web application framework to deploy the model. The model can be deployed as a web application where users can input chat messages and get the predicted sentiment of the messages. \n",
+    "The web based application can be accessed [here](https://model.esube.com.et/)\n",
+    "## Telegram bot Integration\n",
+    "I integrated the API with telegram where telegram bot responds to texts messages with the sentiment of the text message. The bot can be accessed [here](https://t.me/CampusRobot)"
+   ],
+   "id": "9c15bf4dd4fe2a9"
   }
  ],
  "metadata": {
